fixed some other lines that have been removed